# MLOps_T2

./: .gitignore  Fase_2.md  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/interim/: .gitignore  energy_efficiency_interim_clean_drop.csv.dvc  energy_efficiency_interim_clean_fill.csv.dvc
data/processed/: .gitignore  energy_efficiency_clean_drop.csv.dvc  energy_efficiency_clean_fill.csv.dvc  energy_efficiency_prepared.csv.dvc  energy_efficiency_test_prepared.csv.dvc  energy_efficiency_train_prepared.csv.dvc
data/raw/: .gitignore  energy_efficiency_modified.csv.dvc  energy_efficiency_original.csv.dvc
docs/: mkdocs.yml
docs/docs/: EDA.md  MLflow_server.md  clean-drop-dataset.md  clean-fill-dataset.md  dvc_setup.md  getting-started.md  index.md  model-selection.md
mlruns/631343830109072639/: meta.yaml
models/: .gitignore  minmax_scaler.joblib  onehotencoder.joblib  xgb_cooling_load_model.joblib  xgb_heating_load_model.joblib
models/random_forest-cooling/2025-10-11_02-25-58/: metrics.json  signature.json
models/random_forest-heating/2025-10-11_02-25-58/: metrics.json  signature.json
models/xgboost-cooling/2025-10-11_02-23-17/: environment.txt  metrics.json
models/xgboost-heating/2025-10-11_02-23-17/: metrics.json  model.joblib  params.yaml
notebooks/: 1.0-eda-energy-efficiency.ipynb  1.1-clean-drop.ipynb  1.2-clean-fill.ipynb  1.3-feature-engineering.ipynb  1.4-original-comparison.ipynb  2.0-model-training.ipynb
notebooks/.ipynb_checkpoints/: 1.1-clean-drop-checkpoint.ipynb  1.3-feature-engineering-checkpoint.ipynb  2.0-model-training-checkpoint.ipynb
proyecto_final/: .gitignore  README.md  __init__.py  config.py  dataset.py  descriptor.py  dvc.yaml  features.py  main.py  models.py  plots.py  predict.py  train.py
proyecto_final/configs/: rf.yaml  xgb.yaml
proyecto_final/data/: __init__.py  clean_data.py  preprocessing.py  schemas.py
proyecto_final/modeling/: __init__.py  predict.py  predictor.py  train.py  trainer.py
proyecto_final/orchestration/: Dockerfile  main.py  predictor.py  requirements.txt
proyecto_final/orchestration/models/: encoding_scaling_transformer.joblib  initial_cleaning_pipeline.joblib
proyecto_final/orchestration/proyecto_final/data/: data_loader.py
proyecto_final/orchestration/proyecto_final/preprocessing/: pipeline.py  transformers.py
proyecto_final/preprocessing/: __init__.py  prediction_pipeline.py  transformers.py
proyecto_final/scripts/: __init__.py  dd.py  monitor_data_drift.py  monitor_data_drift_1.py  run_preprocessing.py
reports/: test_results.xml
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_data_cleaner.py  test_data_loader.py  test_predictor.py  test_trainier_metrics.py  test_transformers.py
