[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_final"
version = "0.0.1"
description = "Final project for MLOps"
authors = [
  { name = "team_2" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["proyecto_final"]
include = ["pyproject.toml", "proyecto_final/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto_final"]
force-sort-within-sections = true

