[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_final"
version = "0.0.1"
description = "Final project for MLOps"
authors = [
  { name = "team_2" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "asyncssh==2.21.1",
    "atpublic==6.0.2",
    "attrs==25.3.0",
    "babel==2.17.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.2",
    "billiard==4.2.2",
    "binaryornot==0.4.4",
    "bleach==6.2.0",
    "cachetools==6.2.0",
    "celery==5.5.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "configobj==5.0.9",
    "contourpy==1.3.3",
    "cookiecutter==2.6.0",
    "cookiecutter-data-science==2.3.0",
    "cramjam==2.11.0",
    "cryptography==43.0.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dpath==2.2.0",
    "dulwich==0.24.2",
    "dvc==3.63.0",
    "dvc-data==3.16.12",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.2",
    "dvc-render==1.0.2",
    "dvc-ssh==4.2.1",
    "dvc-studio-client==0.22.0",
    "dvc-task==0.40.2",
    "entrypoints==0.4",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fastparquet==2024.11.0",
    "filelock==3.19.1",
    "flatten-dict==0.4.2",
    "flufl-lock==8.2.0",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "funcy==2.0",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-api-core==2.25.2",
    "google-api-python-client==2.184.0",
    "google-auth==2.41.1",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.70.0",
    "grandalf==0.8",
    "gto==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "iterative-telemetry==0.0.10",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib>=1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.9",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.9",
    "kombu==5.5.4",
    "lark==1.3.0",
    "loguru>=0.7.3",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib>=3.10.6",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mistune==3.1.4",
    "mkdocs>=1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mlflow>=3.5.1",
    "multidict==6.6.4",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy>=2.3.3",
    "oauth2client==4.1.3",
    "omegaconf==2.3.0",
    "orjson==3.11.3",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.0",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic>=2.11.10",
    "pydantic-core==2.33.2",
    "pydot==4.0.1",
    "pydrive2==1.21.3",
    "pygit2==1.18.2",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "pyopenssl==24.2.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-json-logger==3.3.0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.15",
    "ruamel-yaml-clib==0.2.14",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "scmrepo==3.5.2",
    "seaborn>=0.13.2",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqltrie==0.11.2",
    "sshfs==2025.2.0",
    "stack-data==0.6.3",
    "tabulate==0.9.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "tinycss2==1.4.0",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "typer>=0.19.2",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "ucimlrepo==0.0.7",
    "uri-template==1.3.0",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uv==0.8.23",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "xgboost>=3.0.5",
    "yarl==1.21.0",
    "zc-lockfile==4.0",
]


[tool.ruff]
line-length = 99
src = ["proyecto_final"]
include = ["pyproject.toml", "proyecto_final/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto_final"]
force-sort-within-sections = true

